--- a/style.css
+++ b/style.css
@@ -14,7 +14,11 @@ html{
 
 .cards-container .anime-card{
     position: relative;
+    overflow: hidden;
     height: 250px;
+    border-radius: 6px;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.604);
+    cursor: pointer;
 }
 .cards-container .anime-card img{
     width: 100%;
@@ -23,10 +27,21 @@ html{
 .cards-container .anime-card div{
     position: absolute;
     display: flex;
-    justify-content: center;
+    text-align: center;
     align-items: center;
     bottom: 0;
     width: 100%;
     height: 4rem;
+    font-size: 0.7rem;
+    color: rgb(255, 255, 255);
     background-color: rgb(0, 234, 255);
+}
+.cards-container .anime-card:hover img{
+    transition: 0.3s;
+    transform: scale(1.13);
+}
+
+.cards-container .anime-card:hover div{
+    transition: 0.3s;
+    background-color: rgb(0, 187, 255);
 }
