--- a/style.css
+++ b/style.css
@@ -5,17 +5,17 @@ html{
 
 .cards-container{
     display: grid;
-    grid-template-columns: repeat(auto-fill,minmax(180px, 200px));
+    grid-template-columns: repeat(auto-fill,minmax(200px, 250px));
     grid-template-rows: auto;
     justify-content: center;
     padding: 1rem;
-    gap: 0.5rem;
+    gap: 3rem;
 }
 
 .cards-container .anime-card{
     position: relative;
     overflow: hidden;
-    height: 250px;
+    height: 280px;
     border-radius: 6px;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.604);
     cursor: pointer;
@@ -27,14 +27,17 @@ html{
 .cards-container .anime-card div{
     position: absolute;
     display: flex;
-    text-align: center;
+    justify-content: center;
     align-items: center;
     bottom: 0;
     width: 100%;
     height: 4rem;
     font-size: 0.7rem;
-    color: rgb(255, 255, 255);
     background-color: rgb(0, 234, 255);
+}
+.cards-container .anime-card div p{
+    text-align: center;
+    margin: 0;
 }
 .cards-container .anime-card:hover img{
     transition: 0.3s;
@@ -44,4 +47,8 @@ html{
 .cards-container .anime-card:hover div{
     transition: 0.3s;
     background-color: rgb(0, 187, 255);
+}
+/* ANIME SECTION */
+.anime_info-container{
+    /* display: none; */
 }
