--- a/style.css
+++ b/style.css
@@ -2,7 +2,6 @@ html{
     font: 62.5%;
 }
 
-
 .cards-container{
     display: grid;
     grid-template-columns: repeat(auto-fill,minmax(200px, 250px));
@@ -17,7 +16,6 @@ html{
     overflow: hidden;
     height: 280px;
     border-radius: 6px;
-    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.604);
     cursor: pointer;
 }
 .cards-container .anime-card img{
@@ -32,9 +30,12 @@ html{
     bottom: 0;
     width: 100%;
     height: 4rem;
-    font-size: 0.7rem;
+    font-size: 0.8rem;
+    font-weight: bold;
     background-color: rgb(0, 234, 255);
 }
+
+
 .cards-container .anime-card div p{
     text-align: center;
     margin: 0;
@@ -60,12 +61,29 @@ html{
     animation-delay: 0.5s;
 }
 
+#toggle{
+    display: none;
+}
+#label_toggle{
+    font-size: 1.5rem;
+    margin-left: 0.3rem;
+    cursor: pointer;
+}
+
+.dark{
+    background-color: rgb(0, 7, 17);
+    color: rgb(255, 255, 255);
+    transition: all 1.5s ease;
+}
+
 @keyframes fadeIn {
     to {
         scale: 1;
         opacity: 1;
     }
 }
+
+
 
 /* @media (max-width: 800px) {
     .anime_info-container{
